# POT

./: .coveragerc  .gitattributes  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  .travis.yml  .yamllint.yml  CITATION.cff  CITATIONS.cff  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASES.md  codecov.yml  coverage_help.md  debug.py  ignore-words.txt  openmp_helpers.py  pre_build_helpers.py  pyproject.toml  requirements.txt  requirements_all.txt  setup.cfg  setup.py  stderr.txt  test_timing.py  travis.yml
.circleci/: artifact_path  config.yml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  environment.yml  labeler.yml  requirements_cuda.txt  requirements_strict.txt  requirements_test_windows.txt
.travis/: before_install.sh
benchmarks/: __init__.py  benchmark.py  emd.py  sinkhorn_knopp.py
data/: entropic_partial_OT_cost.txt  manhattan.npz
doc/: Makefile  make.bat
docs/: Makefile  cache_nbrun  nb_build  nb_run_conv  requirements.txt  requirements_rtd.txt
examples/: Demo_1D_OT.ipynb  Demo_1D_barycenter.ipynb  Demo_2D_OT_DomainAdaptation.ipynb  Demo_2D_Ot_samples.ipynb  Demo_Compute_EMD.ipynb  Demo_Image_ColorAdaptation.ipynb  Demo_Wasserstein_Discriminant_Analysis.ipynb  README.txt  demo_1D_optimal_transport.ipynb  demo_OTDA_2D.py  demo_OTDA_classes.py  demo_OTDA_color_images.py  demo_OTDA_mapping.py  demo_OTDA_mapping_color_images.py  demo_OT_1D.py  demo_OT_2D_samples.py  demo_barycenter_1D.py  demo_optim_OTreg.py  dev_batch.py  index.rst  plot_Intro_OT.py  plot_OTDA_2D.py  plot_OTDA_classes.py  plot_OTDA_color_images.py  plot_OTDA_mapping.py  plot_OTDA_mapping_color_images.py  plot_OT_1D.py  plot_OT_1D_smooth.py  plot_OT_1D_sparsity_constrained.py  plot_OT_2D_samples.py  plot_OT_L1_vs_L2.py  plot_Sinkhorn_gradients.py  plot_UOT_1D.py  plot_UOT_barycenter_1D.py  plot_WDA.py  plot_barycenter_1D.py  plot_barycenter_fgw.py  plot_barycenter_lp_vs_entropic.py  plot_bsp_ot.py  plot_compute_emd.py  (+26 more)
notebooks/: Demo_1D_barycenter.ipynb  Demo_2D_OTmapping_DomainAdaptation.ipynb  Demo_Ground_Loss.ipynb  Demo_Image_ColorAdaptation_mapping.ipynb  Demo_Optim_OTreg.ipynb  plot_OT_1D.ipynb  plot_OT_1D_smooth.ipynb  plot_OT_2D_samples.ipynb  plot_OT_L1_vs_L2.ipynb  plot_UOT_1D.ipynb  plot_UOT_barycenter_1D.ipynb  plot_WDA.ipynb  plot_barycenter_1D.ipynb  plot_barycenter_fgw.ipynb  plot_barycenter_lp_vs_entropic.ipynb  plot_compute_emd.ipynb  plot_convolutional_barycenter.ipynb  plot_fgw.ipynb  plot_free_support_barycenter.ipynb  plot_gromov.ipynb  plot_gromov_barycenter.ipynb  plot_optim_OTreg.ipynb  plot_otda_classes.ipynb  plot_otda_color_images.ipynb  plot_otda_d2.ipynb  plot_otda_jcpot.ipynb  plot_otda_laplacian.ipynb  plot_otda_linear_mapping.ipynb  plot_otda_mapping.ipynb  plot_otda_mapping_colors_images.ipynb  plot_otda_semi_supervised.ipynb  plot_partial_wass_and_gromov.ipynb  plot_screenkhorn_1D.ipynb  plot_stochastic.ipynb
ot/: __init__.py  backend.py  bregman.py  coot.py  da.py  datasets.py  demd.py  deprecation.py  dr.py  factored.py  gaussian.py  geomloss.py  gmm.py  gromov.py  lowrank.py  mapping.py  optim.py  partial.py  partial_gw.py  plot.py  regpath.py  semidiscrete.py  sgot.py  sliced.py  smooth.py  solvers.py  sparse.py  stochastic.py  unbalanced.py  utils.py  weak.py
ot1/: da.py
test/: conftest.py  test_1d_solver.py  test_backend.py  test_bregman.py  test_bspot.py  test_circle_solver.py  test_coot.py  test_da.py  test_demd.py  (+36 more)
test-pot/: pyvenv.cfg
(+414 files in other folders)
