[metadata]
description-file = README.md

[flake8]
exclude = __init__.py
ignore = E265,E501,W605,W503,W504

[tool:pytest]
addopts =
    --showlocals --durations=20 --doctest-modules -ra --cov-report= --cov=ot
    --doctest-ignore-import-errors --junit-xml=junit-results.xml
    --ignore=docs --ignore=examples --ignore=notebooks

[pycodestyle]
exclude = __init__.py,constants.py,fixes.py
ignore = E241,E305,W504

[pydocstyle]
convention = pep257
match_dir = ^(?!\.|docs|examples).*$
match = (?!tests/__init__\.py|fixes).*\.py
add-ignore = D100,D104,D107,D413
add-select = D214,D215,D404,D405,D406,D407,D408,D409,D410,D411
ignore-decorators = ^(copy_.*_doc_to_|on_trait_change|cached_property|deprecated|property|.*setter).*
